--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 header {
   position: fixed;
-  color: white;
+  color: hotpink;
   padding: 2.5rem 3rem;
   background-color: black;
   width: 100%;
@@ -28,6 +28,20 @@ header {
   background-position: left;
   height: 100vh;
   border-bottom: 2px solid #00ffff;
+}
+
+.top-box {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 30%;
+  left: 20rem;
+  gap: 1rem;
+  background-color: black;
+  padding: 3rem;
+  height: 50vh;
+  width: 35vw;
+  word-wrap: break-word;
 }
 
 .car-background {
