--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header {
   position: fixed;
   color: hotpink;
   padding: 2.5rem 3rem;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   z-index: 1;
   display: flex;
@@ -19,6 +19,7 @@ header {
   gap: 2rem;
   align-items: baseline;
   font-size: 30px;
+  text-transform: uppercase;
 }
 
 .watch-background {
@@ -42,6 +43,13 @@ header {
   height: 50vh;
   width: 35vw;
   word-wrap: break-word;
+  font-size: 25px;
+  border: 2px solid #00ffff;
+  border-radius: 20px;
+}
+
+.top-box h2 {
+  text-decoration: underline;
 }
 
 .car-background {
