--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
-  padding: 0;
   box-sizing: border-box;
   font-family: monospace;
   color: white;
 }
 
+section {
+  scroll-margin-top: 15%;
+}
+
 header {
   position: fixed;
-  color: hotpink;
   padding: 2.5rem 3rem;
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
+  height: 15%;
   z-index: 1;
   display: flex;
   flex-wrap: wrap;
@@ -40,8 +47,8 @@ header {
   gap: 1rem;
   background-color: black;
   padding: 3rem;
-  height: 50vh;
-  width: 35vw;
+  height: 45vh;
+  width: 20vw;
   word-wrap: break-word;
   font-size: 25px;
   border: 2px solid #00ffff;
@@ -61,12 +68,89 @@ header {
   border-bottom: 2px solid #00ffff;
 }
 
+.middle-box {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 15%;
+  left: 6rem;
+  gap: 2rem;
+  background-color: black;
+  padding: 3rem;
+  height: 25vh;
+  width: 25vw;
+  word-wrap: break-word;
+  font-size: 25px;
+  border: 2px solid #00ffff;
+  border-radius: 20px;
+}
+
+.middle-box h2 {
+  text-decoration: underline;
+}
+
 .human-background {
   background-image: url("./images/tech-human.png");
   position: relative;
   background-size: cover;
   background-position: left;
   height: 100vh;
-  border-bottom: 2px solid #00ffff;
-  z-index: 2;
+  z-index: 0;
+}
+
+.bottom-box {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 25%;
+  left: 15rem;
+  gap: 2rem;
+  background-color: black;
+  padding: 3rem;
+  height: 44vh;
+  width: 30vw;
+  word-wrap: break-word;
+  font-size: 25px;
+  border: 2px solid #00ffff;
+  border-radius: 20px;
+}
+
+.bottom-box h2 {
+  text-decoration: underline;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 5%;
+  z-index: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 2rem;
+  align-items: center;
+  font-size: 15px;
+}
+
+.back-to-top {
+  position: absolute;
+  height: 34px;
+  bottom: 10%;
+  left: 5rem;
+  background-color: black;
+  border-radius: 6px;
+  align-items: center;
+  padding: 5px;
+  transition: 0.2 ease-out;
+}
+
+.back-to-top:hover {
+  border: 2px solid #00ffff;
+}
+
+.back-to-top:hover span {
+  transform: translateY(-2px);
 }
